--- a/css/style.css
+++ b/css/style.css
@@ -13,27 +13,53 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  color: #fff;
-  font-size: 30px;
+  font-size: 50px;
 }
 
+.container2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  color: red;
+  font-size: 50px;
+  border: 5px solid white;
+}
+
+h1 {
+  color: red;
+}
 
 button {
   text-align: center;
   margin: 50px 0;
   padding: 20px;
-  font-size: 30px;
+  font-size: 50px;
   color: black;
   background-color: red;
   border: 2px solid white;
   cursor: pointer;
 }
 
-
 #timer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   font-size: 200px;
   color: #fff;
+}
+
+#score {
+  text-align: center;
+}
+
+#remember {
+  text-align: center;
+}
+
+.visible {
+  display: inline-block;
+}
+
+.invisible {
+  display: none;
 }
