--- a/css/style.css
+++ b/css/style.css
@@ -13,17 +13,10 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  font-size: 50px;
+  font-size: 40px;
 }
 
-.container2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  color: red;
-  font-size: 50px;
+.border {
   border: 5px solid white;
 }
 
@@ -35,7 +28,7 @@ button {
   text-align: center;
   margin: 50px 0;
   padding: 20px;
-  font-size: 50px;
+  font-size: 60px;
   color: black;
   background-color: red;
   border: 2px solid white;
@@ -54,10 +47,6 @@ button {
 
 #remember {
   text-align: center;
-}
-
-.visible {
-  display: inline-block;
 }
 
 .invisible {
